# CLAPACK — C-language LAPACK for linear algebra (text/embedding features).

cc_library(
    name = "clapack",
    srcs = glob(
        [
            "*.c",
            "F2CLIBS/libf2c/*.c",
        ],
        exclude = [
            "*_test*.c",
            "test*.c",
        ],
    ),
    hdrs = glob(["*.h", "F2CLIBS/libf2c/*.h", "include/*.h"]),
    includes = [".", "include", "F2CLIBS/libf2c"],
    copts = ["-Wno-everything"],
    visibility = ["//visibility:public"],
)
