# CRCutil — hardware-accelerated CRC32c library.

cc_library(
    name = "crcutil",
    srcs = [
        "interface.cc",
        "multiword_64_64_intrinsic_i386_mmx.cc",
    ] + select({
        "@platforms//cpu:x86_64": ["crc32c_sse4.cc"],
        "//conditions:default": [],
    }),
    hdrs = glob(["*.h", "code/*.h", "interface/*.h"]),
    includes = [".", "interface"],
    copts = ["-Wno-everything"],
    visibility = ["//visibility:public"],
)
