# contrib/libs/libc_compat/BUILD.bazel
# POSIX compatibility shims for Linux.
# Sources from contrib/libs/libc_compat/CMakeLists.linux-x86_64.txt

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "libc_compat",
    srcs = [
        "explicit_bzero.c",
        "memfd_create/memfd_create.c",
        "random/getentropy.c",
        "random/getrandom.c",
        "readpassphrase.c",
    ],
    hdrs = glob(
        ["*.h", "include/**/*.h", "memfd_create/*.h", "random/*.h"],
        allow_empty = True,
    ),
    # readpassphrase.h lives in include/readpassphrase/
    copts = ["-Icontrib/libs/libc_compat/include/readpassphrase"],
)
