
# This file was gererated by the build system used internally in the Yandex monorepo.
# Only simple modifications are allowed (adding source-files to targets, adding simple properties
# like target_include_directories). These modifications will be ported to original
# ya.make files by maintainers. Any complex modifications which can't be ported back to the
# original buildsystem will not be accepted.



add_library(contrib-libs-libf2c)
target_compile_options(contrib-libs-libf2c PRIVATE
  -DNO_FPINIT
  -DSkip_f2c_Undefs
  -DNO_My_ctype
  -Wno-everything
)
target_include_directories(contrib-libs-libf2c PUBLIC
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c
)
target_link_libraries(contrib-libs-libf2c PUBLIC
  contrib-libs-cxxsupp
  yutil
)
target_sources(contrib-libs-libf2c PRIVATE
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/abort_.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/backspac.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/c_abs.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/c_cos.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/c_div.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/c_exp.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/c_log.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/c_sin.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/c_sqrt.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/cabs.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/close.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/ctype.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/d_abs.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/d_acos.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/d_asin.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/d_atan.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/d_atn2.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/d_cnjg.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/d_cos.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/d_cosh.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/d_dim.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/d_exp.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/d_imag.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/d_int.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/d_lg10.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/d_log.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/d_mod.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/d_nint.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/d_prod.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/d_sign.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/d_sin.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/d_sinh.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/d_sqrt.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/d_tan.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/d_tanh.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/derf_.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/derfc_.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/dfe.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/dolio.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/dtime_.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/due.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/ef1asc_.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/ef1cmc_.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/endfile.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/erf_.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/erfc_.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/err.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/etime_.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/exit_.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/f77_aloc.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/f77vers.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/fmt.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/fmtlib.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/ftell_.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/getarg_.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/getenv_.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/h_abs.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/h_dim.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/h_dnnt.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/h_indx.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/h_len.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/h_mod.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/h_nint.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/h_sign.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/hl_ge.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/hl_gt.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/hl_le.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/hl_lt.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/i77vers.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/i_abs.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/i_ceiling.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/i_dim.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/i_dnnt.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/i_indx.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/i_len.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/i_len_trim.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/i_mod.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/i_nint.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/i_sign.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/iargc_.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/iio.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/ilnw.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/inquire.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/l_ge.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/l_gt.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/l_le.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/l_lt.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/lbitbits.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/lbitshft.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/lread.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/lwrite.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/open.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/pow_ci.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/pow_dd.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/pow_di.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/pow_hh.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/pow_ii.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/pow_ri.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/pow_zi.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/pow_zz.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/r_abs.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/r_acos.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/r_asin.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/r_atan.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/r_atn2.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/r_cnjg.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/r_cos.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/r_cosh.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/r_dim.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/r_exp.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/r_imag.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/r_int.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/r_lg10.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/r_log.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/r_mod.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/r_nint.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/r_sign.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/r_sin.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/r_sinh.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/r_sqrt.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/r_tan.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/r_tanh.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/rdfmt.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/rewind.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/rsfe.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/rsli.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/rsne.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/s_cat.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/s_cmp.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/s_copy.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/s_paus.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/s_rnge.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/s_stop.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/sfe.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/sig_die.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/signal_.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/sue.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/system_.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/typesize.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/uio.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/uninit.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/util.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/wref.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/wrtfmt.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/wsfe.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/wsle.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/wsne.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/xwsne.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/z_abs.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/z_cos.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/z_div.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/z_exp.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/z_log.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/z_sin.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/libf2c/z_sqrt.c
)
